# rest-rs

./: .env  Cargo.toml  Dockerfile  README.md
migrations/2021-04-10-084100_users/: up.sql
src/: db.rs  main.rs
src/handler/: add_user.rs  get_user.rs  mod.rs
